k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ephemeral-backend
  labels:
    name: ephemeral-backend
    tier: backend
    environment: production
