k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ephemeral-backend-service
  namespace: ephemeral-backend
  labels:
    app: ephemeral-backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: ClusterIP
  selector:
    app: ephemeral-backend
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  sessionAffinity: None
